objects/Collage__c.object
<CustomObject>
    <description>here is collage details like collage name, address etc</description>
    <fields>
        <fullName>Collage_Address__c</fullName>
        <description>here is address of that collage</description>
        <label>Collage Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collage_Name__c</fullName>
        <description>here is collage name of that particular collage</description>
        <label>Collage Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>here is description  for collage that which facilities collage is going to provide</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Collage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Collage_Name__c</columns>
        <columns>Collage_Address__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{000}</displayFormat>
        <label>Collage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>